# az-fastapi-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  main.py  preprocess_helpers.py  security.py  setup_model.py
src/api/: __init__.py  api_schemas.py
src/api/v1/: api_schemas.py  endpoints.py
src/configs/: __init__.py  logger.py  settings.py
